<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

<!--    Block 1 Start-->
    <ImageView
        android:id="@+id/palace_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/palace"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_description"/>

<!--Block 1 end-->

<!--    Block2 start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_image_background"
                android:clipToOutline="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/profile_name"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:id="@+id/download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/download_icon"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:padding="10dp"
                android:tint="@color/white"
                tools:ignore="UseAppTint"/>
            <!--  tools:ignore="UseAppTint" was IDE Suggestion-->

            <ImageView
                android:id="@+id/like"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/like_icon"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:padding="10dp"
                android:tint="@color/white"
                tools:ignore="UseAppTint"/>
            <!--  tools:ignore="UseAppTint" was IDE Suggestion-->

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/bookmark_icon"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:padding="10dp"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />
            <!--  tools:ignore="UseAppTint" was IDE Suggestion-->

        </LinearLayout>

    </LinearLayout>


<!--    Block 2 end-->

<!--    Block 3 start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <!-- Camera -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Camera"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/camera_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>


            <!-- Aperture -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Aperture"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/aperture_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Focal Length -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Focal Length"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/focal_length_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>


            <!-- Shutter Speed -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Shutter Speed"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/shutter_speed_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- ISO -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="ISO"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/ISO_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>


            <!-- Dimensions -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Dimensions"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/dimensions_title"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </LinearLayout>
<!--        Block 3 end-->



    </LinearLayout>


<!--    Block 4 start-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="Views"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/views"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="Downloads"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/downloads"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"/>
        </LinearLayout><!-- Replace with your content --><!-- Replace with your content -->

        <!-- Third block with equal width -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="Likes"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/likes"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"/>
        </LinearLayout><!-- Replace with your content --> <!-- Replace with your content -->

    </LinearLayout>

<!--    Block 4 end-->

<!--    Block 5 start-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/tag1"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:background="@drawable/oval_background"/>


        <TextView
            android:layout_marginLeft="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/tag2"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:background="@drawable/oval_background"/>


    </LinearLayout>


</LinearLayout>